[package]
name = "datamorph-rs"
version = "0.1.0"
edition = "2021"
authors = ["Harishankar Narayanan <nharishankar@gmail.com>"]
description = "Data transformation library using declarative specifications"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
