[package]
name = "datamorph-rs"
version = "0.1.0"
edition = "2021"
authors = ["Harishankar Narayanan <nharishankar@gmail.com>"]
description = "Data transformation library using declarative specifications"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://openpayments.tech"
repository = "https://github.com/Open-Payments/datamorph-rs"
keywords = ["Data", "transformation", "transform", "json", "format"]
categories = ["data-structures", "development-tools", "template-engine", "parsing", "value-formatting"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
jsonlogic-rs = "0.2"

[dev-dependencies]
anyhow = "1.0"
